# simple-websocket

./: .gitignore  CHANGES.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yml
docs/: api.rst  conf.py  index.rst  intro.rst
examples/: aio_echoclient.py  aio_echoserver.py  aioechoclient.py  aioechoserver.py  asgiechoserver.py  c.py  echoclient.py  echoserver.py  s.py
examples/templates/: index.html
src/simple_websocket/: __init__.py  aiows.py  asgi.py  deasync.py  ws.py
tests/: helpers.py  test_aioclient.py  test_aioserver.py  test_client.py  test_server.py  test_simple_websocket.py  test_simple_websocket_client.py  test_simple_websocket_server.py
