[project]
name = "simple-websocket"
version = "1.1.0"
authors = [
    { name = "Miguel Grinberg", email = "miguel.grinberg@gmail.com" },
]
description = "Simple WebSocket server and client for Python"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
    "wsproto",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/miguelgrinberg/simple-websocket"
"Bug Tracker" = "https://github.com/miguelgrinberg/simple-websocket/issues"

[project.optional-dependencies]
dev = [
    "tox",
    "flake8",
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

